--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 
   <br>
   <br>
+  
+  <h1 id="bigText">Why I Chose This Project</h1>
+  
+  <p id="homeText">I chose to make a custom classroom for students with autism like Christopher because I felt that I could do something different. Along the way, I had a few issues with blender but I looked for help and solved most of my problems. I didn't have time to solve some problems such as the coloring and rendering, so it is an unfinished prototype.</p>
+  
   <br>
   <center>
     <p style="font-size: 45px;">Image Sources</p>
