--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
   <h1 id="bigText">Why I Chose This Project</h1>
   
-  <p id="homeText">I chose to make a custom classroom for students with autism like Christopher because I felt that I could do something different. Along the way, I had a few issues with blender but I looked for help and solved most of my problems. I didn't have time to solve some problems such as the coloring and rendering, so it is an unfinished prototype.</p>
+  <p id="homeText">I chose to make a custom classroom for students with autism like Christopher because I felt that I could do something different. Along the way, I had a few issues with Blender but I looked for help and solved most of my problems. I didn't have time to solve some problems such as the coloring and rendering, so it is an unfinished prototype.</p>
   
   <br>
   <center>
