--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </pre>
 
   <h1 id="bigText">Christopher's Classroom</h1>
-  <h3>Made by Sebastian Colberg in April of 2022</h3>
+  <h2 style="text-align:center">Made by Sebastian Colberg in April of 2022</h2>
 
   <p id="homeText">Welcome to Christopher's Classroom! This is a specialized classroom designed to support a person with
     autism such as Christopher from <i>the curious incident of the dog in the night-time</i> written by Mark Haddon.
