--- a/features.html
+++ b/features.html
@@ -31,8 +31,8 @@
 
 
   <div class="a">
-    <p>Everyone learns differently in different classroom environments. The book <i>The Curious Incident of the Dog in
-        the Night-Time</i>, a novel by Mark Haddon, highlights this through the main character Christopher. Christopher
+    <p>Everyone learns differently in different classroom environments. The book <i>the curious incident of the dog in
+        the nighttime</i>, a novel by Mark Haddon, highlights this through the main character Christopher. Christopher
       is a kid with autism that has trouble in social environments. He is very strong at math but doesn’t like meeting
       new people or being touched. I designed a new classroom that aims to solve many of these problems. The desks are
       spaced apart in a way that no student is disturbed and there are noise-canceling headphones available to the
@@ -46,12 +46,13 @@
       strengths. This can be anything from math to English to language. For math, the corner has ipads with multiple
       math practice apps such as solve me mobiles and i-ready. The built-in fish tank and beanbag chairs are made
       purposefully to make the space more comfortable for anyone. If the student wants a break, they can go to the
-      corner at any time during a class period to quietly work on their classwork or practice their strengths. “I
-      doubled 2’s in my head because it made me feel calmer. I got to 33554432, which is 225 which was not very much
-      because I’ve got to 245 before, but my brain wasn’t working very well.” Haddon 120. This can help kids with
-      multiple intelligences because it doesn’t just have to be math, there are many apps pre-loaded to the ipads to
-      cater to people with different intelligences. This is helpful because it is a retreat away from class and towards
-      something they feel comfortable with. Another feature of the classroom is the desks.
+      corner at any time during a class period to quietly work on their classwork or practice their strengths. For
+      Christopher, math makes him comfortable in awkward situations. He uses math as a tool to be able to calm himself
+      down;“I doubled 2’s in my head because it made me feel calmer. I got to 33554432, which is 225 which was not very 
+      much because I’ve got to 245 before, but my brain wasn’t working very well.” (Haddon 120). This can help kids with
+      multiple intelligences because it doesn’t just have to be math, there are many apps pre-loaded to the ipads such as
+      iready and solve me mobiles to cater to people with different intelligences. This is helpful because it is a retreat
+      away from class and towards something they feel comfortable with. Another feature of the classroom is the desks.
     </p>
   </div>
   <br>
@@ -62,11 +63,13 @@
       productive during class while capturing and conveniently displaying their work on the teacher’s computer. The
       built-in keyboards are connected to the right display for students to share their questions about the lesson or
       answers to a question. The convenient button next to the keyboard allows them to submit their work to the display.
-      “Then he drew some other pictures” … “but I was unable to say what those meant” (Haddon 3). Students like
-      Christopher may be great at doing their work but they have trouble sharing it. This allows them to do and share
-      their hard work without raising their hand to speak. This is also convenient because it lets everyone share their
-      work at the same time effortlessly and anonymously if needed. Things change when things are designed for the norm,
-      they only benefit a small number of people and if we keep doing this, it will be harder and harder to escape it.
+      Christopher has a hard time figuring out emotions, seeing what people were feeling just by looking at their face.
+      He also has a hard time expressing his emotions and thoughts. “Then he drew some other pictures” … “but I was unable
+      to say what those meant” (Haddon 3). Students like Christopher may be great at doing their work but they have trouble
+      sharing it. This allows them to do and share their hard work without raising their hand to speak. This is also
+      convenient because it lets everyone share their work at the same time effortlessly and anonymously if needed. Things
+      change when things are designed for the norm, they only benefit a small number of people and if we keep doing this,
+      it will be harder and harder to escape the enormous hole that we have dug ourselves into as a society.
     </p>
   </div>
   <br>
