--- a/features.html
+++ b/features.html
@@ -48,7 +48,7 @@
       purposefully to make the space more comfortable for anyone. If the student wants a break, they can go to the
       corner at any time during a class period to quietly work on their classwork or practice their strengths. For
       Christopher, math makes him comfortable in awkward situations. He uses math as a tool to be able to calm himself
-      down;“I doubled 2’s in my head because it made me feel calmer. I got to 33554432, which is 225 which was not very 
+      down; “I doubled 2’s in my head because it made me feel calmer. I got to 33554432, which is 225 which was not very 
       much because I’ve got to 245 before, but my brain wasn’t working very well.” (Haddon 120). This can help kids with
       multiple intelligences because it doesn’t just have to be math, there are many apps pre-loaded to the ipads such as
       iready and solve me mobiles to cater to people with different intelligences. This is helpful because it is a retreat
@@ -64,7 +64,7 @@
       built-in keyboards are connected to the right display for students to share their questions about the lesson or
       answers to a question. The convenient button next to the keyboard allows them to submit their work to the display.
       Christopher has a hard time figuring out emotions, seeing what people were feeling just by looking at their face.
-      He also has a hard time expressing his emotions and thoughts. “Then he drew some other pictures” … “but I was unable
+      He also has a hard time expressing his emotions and thoughts; “Then he drew some other pictures” … “but I was unable
       to say what those meant” (Haddon 3). Students like Christopher may be great at doing their work but they have trouble
       sharing it. This allows them to do and share their hard work without raising their hand to speak. This is also
       convenient because it lets everyone share their work at the same time effortlessly and anonymously if needed. Things
